Made changes to the header h1 margin-top when the header covered the search bar in chromium. Now a good in between to show correctly on firefox-esr and chromium

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ ol{
   text-align: center;
 }
 .my_header h1{
+  margin-top: 15px;
 }
 .my_header{
   background-color: #FFFFFF;
